Fixed z-index problem
a

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@
 	height:auto;
 }
 #video-canvas{
-  z-index: 10;
+  z-index: -1;
 }
 
 .screenshots{
